APIs/hardware-inventory/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hardware-inventory
  namespace: hardware-inventory-namespace
  labels:
    app: hardware-inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hardware-inventory
  template:
    metadata:
      labels:
        app: hardware-inventory
    spec:
      containers:
      - name: hardware-inventory
        image: hardware-inventory-image
        command: ["uvicorn", "app:app", "--port=8000"]
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
          protocol: TCP
          name: app-port
