APIs/hardware-inventory/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hardware-inventory
  namespace: hardware-inventory-namespace
spec:
  selector:
    app: hardware-inventory
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
