APIs/hardware-inventory/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic
  namespace: hardware-inventory-namespace
spec:
  podSelector:
    matchLabels:
      app: hardware-inventory

  policyTypes:
    - Ingress

  ingress:

  - from:
      - podSelector:
          matchLabels:
            app: api-gateway
    ports:
    - protocol: TCP
      port: 8000
